fix buttons z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,8 @@ p{
 
 /* Media Queries */
 
+/* Desktop at 1200px to 1440px */
+
 @media only screen and (min-width: 1200px){
     .nav-link{
         font-size: 2.5rem;
@@ -167,8 +169,9 @@ p{
     .headline2{
         transform: translateY(90%);
         color: #FE4B4B;
-        display: block;
-        /* text-align: center; */
+        position: absolute;
+        z-index: 2;
+
     }
 
     .hero2Headline{
@@ -201,6 +204,11 @@ p{
         height: auto;
         width: 100%;
         transform: translateX(1%) translateY(-39%);
+        z-index: 1;
+    }
+
+    .carousel-control-prev, .carousel-control-next{
+        z-index: 3;
     }
   }
 
@@ -302,6 +310,7 @@ p{
 
     .carousel-control-prev, .carousel-control-next{
         margin-top: -10rem;
+        z-index: 3;
     }
 
     .headline2{
@@ -309,6 +318,7 @@ p{
         transform: translateY(95%);
         padding: 3.5rem;
         text-align: center;
+        z-index: 2;
     }
 
     .hero2Headline{
@@ -343,6 +353,7 @@ p{
         height: auto;
         width: 205%;
         transform: translateX(4%) translateY(125%);
+        z-index: 1;
     }
 
     .empanadaPatterns2{
@@ -350,7 +361,8 @@ p{
         margin-left: -10rem;
         height: auto;
         width: 205%;
-        transform: translateX(-10%) translateY(-125%);
+        transform: translateX(-10%) translateY(-220%);
+        z-index: 1;
     }
     
   }
